Skip not yet known framework IDs in `generateInverseOffers()`.

This patch fixes MESOS-10109 by making hierarchical allocator, when
it generates inverse offers, skip IDs of frameworks returned by
`Slave::getOfferedOrAllocated()` that have not yet been added
to the allocator via `addFramework()`.

Review: https://reviews.apache.org/r/72314